[Bug 374638] trash_folder_name doesn't work r=mscott, sr=bienvenu