mailnews/imap/src/nsImapIncomingServer.cpp
@@ -3464,7 +3464,8 @@ NS_IMETHODIMP nsImapIncomingServer::GetTrashFolderName(nsAString& retval)
   nsresult rv = GetUnicharValue(PREF_TRASH_FOLDER_NAME, retval);
   if (NS_FAILED(rv))
     return rv;
-  retval = NS_LITERAL_STRING(DEFAULT_TRASH_FOLDER_NAME);
+  else if (retval.IsEmpty())
+    retval = NS_LITERAL_STRING(DEFAULT_TRASH_FOLDER_NAME);
   return NS_OK;
 }
 
